<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupTabFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                tools:ignore="UselessParent">
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/logo"
                    android:layout_gravity="center"


                    />
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:id="@+id/signup_email"
                    android:layout_marginTop="1dp"
                    android:padding="5dp"
                    android:hint="@string/email"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="5dp"
                    android:background="@drawable/edittext_bkg"/>
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:id="@+id/signup_password"

                    android:padding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:background="@drawable/edittext_bkg"/>
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:id="@+id/signup_ssid"
                    android:layout_marginTop="1dp"
                    android:padding="8dp"
                    android:hint="@string/ssid"
                    android:drawableStart="@drawable/ic_baseline_password_24"
                    android:drawablePadding="8dp"
                    android:background="@drawable/edittext_bkg"/>
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:id="@+id/signup_name"
                    android:layout_marginTop="1dp"
                    android:padding="5dp"
                    android:hint="@string/name"
                    android:drawablePadding="8dp"
                    android:background="@drawable/edittext_bkg"
                     />
                <Spinner
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:id="@+id/study_year"
                    android:layout_marginTop="1dp"
                    android:padding="8dp"
                    android:drawablePadding="8dp"
                    android:background="@drawable/edittext_bkg"
                    android:entries="@array/study_year"/>
                <Button
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"
                    android:id="@+id/signup_button"
                    android:textSize="18sp"
                    android:text="@string/register"
                    app:cornerRadius = "30dp"
                    android:textColor="@color/white"

                    android:background="@drawable/btn_bkg"/>



            </LinearLayout>
        </LinearLayout>

</LinearLayout>