<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"

    >

    <Button
        android:id="@+id/apply_level_one_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="136dp"
        android:background="@drawable/btn_bkg"
        android:padding="15dp"
        android:text="@string/applying_to_college"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/courses_reg_level_one_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"

        android:padding="15sp"
        android:background="@drawable/btn_bkg"
        android:text="@string/courses_registration"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apply_level_one_btn" />

    <Button
        android:id="@+id/attach_level_one_btn"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_gravity="center"

        android:padding="15sp"
        android:text="@string/add_attachment"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/btn_bkg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courses_reg_level_one_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>