<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity"
    android:orientation="vertical"
    android:weightSum="5">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_state"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="15sp"
        android:layout_weight="1"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:id="@+id/employees_ll"
        android:layout_weight="2"
        >
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/employees"
            android:layout_margin="10dp"
            android:layout_gravity="center"

            android:background="@drawable/circle"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employee"
            android:textSize="30sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:id="@+id/students_ll"
        android:layout_weight="2"
        tools:ignore="UseCompoundDrawables"
        >
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/students"
            android:layout_margin="10dp"
            android:background="@drawable/circle"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textSize="30sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>